Implemented Cancellation API and connected to the Cancel Flow Component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:setup": "supabase start && PGPASSWORD=postgres psql -h localhost -p 54322 -U postgres -d postgres -f seed.sql"
   },
   "dependencies": {
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.50.5",
     "crypto": "^1.0.1",
     "next": "15.3.5",
